<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="800dp">
    <!-- Overshoot the width because Android likes adding
         its own margins onto Dialogs for whatever reason -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/additional_information"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Big Picture -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="216dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <ImageView
                        android:id="@+id/image_org"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                </androidx.cardview.widget.CardView>

                <!-- Other Info -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/image">

                    <!-- Title Bar -->
                    <LinearLayout
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/image">

                        <!-- Organization Logo -->
                        <androidx.cardview.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:cardCornerRadius="8dp">

                            <ImageView
                                android:id="@+id/image_logo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/ic_launcher" />

                        </androidx.cardview.widget.CardView>

                        <!-- Organization Name -->
                        <TextView
                            android:id="@+id/text_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="%ORG_NAME%"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Organization Description -->
                    <TextView
                        android:id="@+id/text_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="%ORG_DESC%"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/image_org" />

                    <!-- Organization Details -->
                    <TextView
                        android:id="@+id/text_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="%ORG_DETAILS%"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/image_org" />

                    <!-- Date Info -->
                    <LinearLayout
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/text_desc">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/outline_date_range_24"
                            app:tint="@color/grey" />

                        <TextView
                            android:id="@+id/text_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="%DATE%"
                            android:textColor="@color/grey"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <!-- Location Info -->
                    <LinearLayout
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/date">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/baseline_place_24"
                            app:tint="@color/grey" />

                        <TextView
                            android:id="@+id/text_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="%LOCATION%"
                            android:textColor="@color/grey"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <!-- Email -->
                    <LinearLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/date">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/outline_alternate_email_24"
                            app:tint="@color/grey" />

                        <TextView
                            android:id="@+id/text_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="%EMAIL%"
                            android:textColor="@color/grey"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:cardCornerRadius="4dp">

                            <Button
                                android:id="@+id/button_close"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/grey"
                                android:text="@string/cancel"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            app:cardCornerRadius="4dp">

                            <Button
                                android:id="@+id/button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/blue"
                                android:text="@string/register"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</FrameLayout>